# beemeshpp

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
include/: Bee.hpp  BeeMesh.hpp  BenchmarkResult.hpp  Connection.hpp  Endpoint.hpp  Hive.hpp  HostInfo.hpp  Job.hpp  JobRequirements.hpp  Launcher.hpp  MessageType.hpp  Monitor.hpp  Protocol.hpp  Utils.hpp  argparse.hpp
src/: Bee.cpp  BeeMesh.cpp  Connection.cpp  Hive.cpp  Job.cpp  Launcher.cpp  Monitor.cpp  main.cpp
